# SampleEditor

./: .gitattributes  .gitignore  README.md  pyproject.toml
docs/: revamp-plan.md
infeed/Case1/: 2ba48580-36a5-4e9f-9992-0f907332a021.isyntax  3012b502-3051-4201-be52-6316d8563576.isyntax  766e4653-dee3-4e95-8226-0ba0f1f9c66d.isyntax  ad629158-5fcf-4c3f-96e6-aad43a070e81.isyntax  df5e39f9-2ac0-4008-87ab-1cdc3ac06366.isyntax  e83cdc0e-9502-4f1d-8308-c856fddee9ed.isyntax  fcb241ec-9752-41d5-ae16-b6a6fb6192e9.isyntax
src/sample_editor/: __init__.py  __main__.py  app.py  cli.py
src/sample_editor/__pycache__/: __init__.cpython-314.pyc.1796004321904  app.cpython-314.pyc.1553339674384  app.cpython-314.pyc.1796004321904  app.cpython-314.pyc.2876335288080
src/sample_editor/core/: __init__.py  config.py  labels.py  mapping.py  slides.py
src/sample_editor/core/__pycache__/: __init__.cpython-314.pyc.1553346017424  __init__.cpython-314.pyc.1796004718960  __init__.cpython-314.pyc.2514289886288  config.cpython-314.pyc.2514289886288  labels.cpython-314.pyc.1553346121728  mapping.cpython-314.pyc.1796004718960  slides.cpython-314.pyc.2876341739472
src/sample_editor/gui/: __init__.py  main_window.py
src/sample_editor/gui/__pycache__/: __init__.cpython-314.pyc.1796004718960
tests/: test_config.py  test_labels.py  test_mapping.py  test_slides.py
tests/__pycache__/: __init__.cpython-314.pyc.1796004322704  test_config.cpython-314.pyc.1796004322704  test_mapping.cpython-314.pyc.1796004322704
